# arbitrage-trading

./: .gitignore  README.md  aggregation_manager.py  config.ini  config_manager.py  main.py  monitoring_manager.py  pyproject.toml  requirements.txt  spread_dashboard.py  trading_manager.py
arb_trading/: README.md  __init__.py  __main__.py
arb_trading/config/: __init__.py  default_config.json  settings.py
arb_trading/core/: __init__.py  arbitrage_engine.py  order_manager.py  position_manager.py  spread_monitor.py
arb_trading/exchanges/: __init__.py  base.py  binance.py  bybit.py
arb_trading/tests/: conftest.py  test_arbitrage.py  test_exchanges.py
arb_trading/utils/: __init__.py  api_helpers.py  logger.py  notifications.py  performance.py  platform_utils.py
benchmark/: benchmark_bybit_all_tickers.py  binance_get_tickers_benchmark.py
code_snippets/: binance_rest_api_test.py
dashboard/: Home.py  __init__.py  charts.py  constants.py  global_data.py  notifications.py  spread.py
dashboard/exchanges/: binance.py  binance_api.py  bitget.py  bitget_api.py  bybit.py  bybit_api.py
exchange/: binance_api.py  binance_websocket.py  bitget_api.py  bybit_api.py  bybit_websocket.py
exchanges/: Real_Websocket  __init__.py  base_exchange.py  binance_api.py  bitget_api.py  bybit_api.py
trader/: base_trader.py  taker_taker_trader.py
trading/: __init__.py  arb_trading.py  arb_trading_Leverage_market&maker.py  arb_trading_leverage.py  arb_trading_maker.py  arb_trading_market&maker.py  binance_websocket_test  bybit_websocket_test  websocket_feeds.py
(+7 files in other folders)
